# PyWebnovel

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  body.json  pyproject.toml  setup.cfg  tmp
scripts/: build  runtests.sh
tests/: helpers.py  test_actions.py  test_cli.py  test_cli_create.py  test_cli_rebuild.py  test_cli_set_cover.py  test_data.py  test_dir.py  test_epub_data.py  test_epub_files.py  test_events.py  test_html.py  test_scraping.py  test_sites_novelbin.py  test_sites_novelcool.py  test_sites_reaperscans.py  test_sites_scribblehub.py  test_sites_wuxiarealm.py  test_sites_wuxiaworld_site.py  test_titles.py  test_utils.py  test_xml.py
tests/data/: novelbin_chapter.html  novelbin_chapterlist.html  novelbin_novel.html  reaperscans_chlist_p1.html  reaperscans_chlist_p1.json  reaperscans_chlist_p2.html  reaperscans_chlist_p3.html  reaperscans_chlist_p4.html  reaperscans_novel.html  wuxiaworld_site_chlist.html  wuxiaworld_site_novel.html
tests/data/novelbin/: chapterlist.html  novel.html
tests/data/novelcool/: chapter.html  novel.html
tests/data/readwn/: chapter-list-1.html  chapter-list-2.html  novel_info.html
tests/data/reaperscans/: chlist_p2.json
tests/data/scribblehub/: admin-ajax.html  chapter.html  chapter_announcements.html  novel.html
tests/data/templates/: galaxytl-2.html.j2  skydemonorder-1.html.j2  skydemonorder-2.html.j2  wp-manga-header.html.j2
tests/data/wuxiarealm/: chapter_list_p1.json  genres.json  novel.html  novel.json
tests/data/wuxiaworldsite/: chlist.html  novel.html
tests/epub/: test_file.py
tests/epub/files/: test_app.py  test_content.py  test_images.py  test_spec.py
tests/live/: __init__.py  test_galaxytl.py  test_helscans.py  test_novelbin.py  test_pandatl.py  test_readhive.py  test_skydemonorder.py  test_translainotaku.py  test_wuxiaworldsite.py
tests/sites/: __init__.py  test_novelbin.py  test_novelcool.py  test_readwn.py  test_reaperscans.py  test_scribblehub.py  test_skydemonorder.py  test_wuxiarealm.py  test_wuxiaworld_site.py
webnovel/: __init__.py  actions.py  cli.py  conf.py  data.py  data_v2.py  dir.py  errors.py  events.py  html.py  http.py  livewire.py  logs.py  scraping.py  utils.py  xml.py
webnovel/cli/: __init__.py  base.py  command.py  create.py  info.py  rebuild.py  set_cover.py  setprop.py  update.py
webnovel/cli/dir/: __init__.py  add.py  clean.py  info.py  update.py
webnovel/epub/: __init__.py  data.py  file.py  files.py  pkg.py
webnovel/epub/content/: stylesheet.css
webnovel/epub/content/templates/: changelog.html  chapter.xhtml  cover.xhtml  nav.xhtml  title_page.xhtml  toc_page.xhtml
webnovel/epub/files/: __init__.py  app.py  base.py  content.py  images.py  jinja.py  opf.py  spec.py
webnovel/epub/templates/: cover.xhtml  title_page.xhtml
webnovel/markdown/: html.py  html_processor.py
webnovel/sites/: __init__.py  bwebnovel.py  daotranslate.py  divinedaolibrary.py  galaxytl.py  genesistranslations.py  helscans.py  infamousscans.py  lightnovelbastian.py  novelbin.py  novelcool.py  novelnext.py  pandatl.py  readhive.py  readwn.py  reaperscans.py  scribblehub.py  skydemonorder.py  translatinotaku.py  wuxiarealm.py  wuxiaworld_site.py  wuxiaworldeu.py
